Fixed alignment issues and quick-fixed navbar for mobiles, apll

--- a/style.css
+++ b/style.css
@@ -1,9 +1,8 @@
 :root{
     --plaintext: #E8EDDF;
     --background: #000000;
-    --primary: #F5CB5C;
-    --secondary: #444644;
-    --tertiary: #CFDBD5;
+    --primary: #B28D15;
+    --secondary: #CFDBD5;
 }
 
 html,body {
@@ -20,7 +19,7 @@ html,body {
     left: 0;
     margin: 0;
     position: relative;
-    background-color: var(--secondary);
+    background-color: var(--primary);
     display: inline-block;
     padding: 20px;
     width: 100%;
@@ -34,7 +33,7 @@ html,body {
 
 #navbar .nav-wrapper a {
     padding: 20px;
-    color: var(--tertiary);
+    color: var(--secondary);
     text-decoration: none;
     transition: 0.2s;
     margin: 0px;
@@ -139,19 +138,27 @@ html,body {
     text-align: left;
     padding: 20px;
     margin: 20px;
-    width: 50%;
+    width: 45%;
     margin-left: 25%;
+    margin-right: 25%;
     
 }
 
-.card-wrapper .card-title, .desc, h3 {
-    display: inline-block;
+.card-wrapper .card-title h3, p {
+    text-align: center;
     margin: 0;
     vertical-align: middle;
 }
 
-.card-wrapper .picture {
+.card-wrapper .picture img{
     display: inline-block;
+    width: 60%;
+}
+
+.card-wrapper .picture {
+    width: 100%;
+    display: block;
+    margin: 0 20%;
 }
 
 
@@ -159,6 +166,32 @@ html,body {
     html, body {
         font-size: 1rem;
         overflow-x: hidden;
+    }
+
+    #navbar {
+        top: 0;
+        left: 0;
+        margin: 0;
+        position: relative;
+        background-color: var(--primary);
+        display: inline-block;
+        font-size: 0.6rem;
+        padding: 10px;
+        width: 100%;
+        height: 100%;
+        z-index: 1;
+    }
+    
+    #navbar .nav-wrapper{
+        position: relative;
+    }
+    
+    #navbar .nav-wrapper a {
+        padding: 10px;
+        color: var(--secondary);
+        text-decoration: none;
+        transition: 0.2s;
+        margin: 0px;
     }
 
     .landing{
@@ -205,6 +238,17 @@ html,body {
         display: block;
     }
 
+    .card-wrapper{
+        border: var(--secondary) 1px solid;
+        text-align: left;
+        padding: 20px;
+        margin: 20px;
+        width: 45%;
+        margin-left: 23%;
+        margin-right: 25%;
+        
+    }
+
     .footer .links img {
         height: 20px;
         width: 20px;
@@ -221,6 +265,22 @@ html,body {
         padding: 25px;
     }
 
+    .card-wrapper .card-title h3, p {
+        text-align: center;
+        margin: 0;
+        vertical-align: middle;
+    }
+    
+    .card-wrapper .picture img{
+        display: inline-block;
+        width: 100%;
+    }
+    
+    .card-wrapper .picture {
+        width: 100%;
+        display: block;
+        margin: 0;
+    }
 }
 
 
